# schema/uploadImage.schema.ts
@@ -1,0 +1,14 @@
+export const image = {
+  "$schema": "http://json-schema.org/draft-04/schema#",
+  "id": "/uploadImage",
+  "title": "uploadImage",
+  "description": "An image in the blog",
+  "type": "object",
+  "properties": {
+    "imageurl": {
+      "description": "Image of the cat",
+      "type": "string"
+    },
+  },
+  "required": ["imageurl"]
+}
